<resources>
    <!-- xx_d_xx 这里的d 表示显示{ display 简写} -->
    <string name="app_name">LatteEC</string>

    <string name="signup_title_register">注册</string>
    <string name="signup_d_name">姓名</string>
    <string name="signup_d_email">邮箱</string>
    <string name="signup_d_phone">手机</string>
    <string name="signup_d_password">密码</string>
    <string name="signup_d_repeatPwd">重复密码</string>
    <string name="signup_btn_d_register">注册</string>
    <string name="signup_d_hint_message">已经注册了? 请登录</string>
    <string name="signin_title_login">登录</string>
    <string name="signin_btn_d_login">登录</string>
    <string name="signin_d_hint_message">还没有账户? 现在可以注册</string>
    <string name="index_d_search">搜索</string>
    <string name="shopCart_d_clear">清除</string>
    <string name="shopCart_d_cart">购物车</string>
    <string name="shopCart_d_delete">删除</string>
    <string name="shopCart_d_account">结算</string>
    <string name="shopCart_d_select_all">全选</string>
    <string name="shopCart_d_summation">合计</string>
    <string name="shopCart_d_shop_title">商品标题</string>
    <string name="shopCart_d_shop_desc">商品描述</string>
    <string name="shopCart_d_go_shopping">去购物</string>
    <string name="fastpay_d_cancel_pay">取消支付</string>
    <string name="personal_d_myorder">我的订单</string>
    <string name="personal_d_allorder">全部订单</string>
</resources>
