<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="#1111"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <android.support.v7.widget.Toolbar
        android:background="@color/app_main"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="75dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_top_shop_cart_clear"
                android:text="@string/shopCart_d_clear"
                android:textSize="18sp"
                android:layout_marginLeft="20dp"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:layout_alignParentLeft="true"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

            <android.support.v7.widget.AppCompatTextView
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:textSize="20sp"
                android:text="@string/shopCart_d_cart"
                android:textColor="@android:color/white"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />


            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_top_shop_cart_remove_selected"
                android:text="@string/shopCart_d_delete"
                android:textSize="18sp"
                android:layout_marginRight="20dp"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_shop_cart"
        android:layout_width="match_parent"
        android:layout_weight="8"
        android:layout_height="0dp"/>
    
    <android.support.v7.widget.ViewStubCompat
        android:id="@+id/stub_no_item"
        android:layout_weight="8"
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout="@layout/stub_shop_cart_no_item"
        android:minHeight="50dp"
        android:layout_height="0dp" />
    
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_gravity="bottom"
        android:minHeight="50dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <!-- 全选图标模块 开始 -->
        <android.support.v7.widget.LinearLayoutCompat
            android:minHeight="50dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <com.joanzapata.iconify.widget.IconTextView
                android:id="@+id/icon_shop_cart_select_all"
                android:layout_weight="1"
                android:gravity="center"
                android:text="{fa-check-circle}"
                android:textColor="@android:color/darker_gray"
                android:textSize="20sp"
                android:layout_width="0dp"
                android:layout_height="match_parent" />
            
            <android.support.v7.widget.AppCompatTextView
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/shopCart_d_select_all"
                android:textColor="@color/app_main"
                android:layout_width="0dp"
                android:layout_height="match_parent" />
        </android.support.v7.widget.LinearLayoutCompat>
        <!-- 全选图标模块 开始 -->

        <!-- 合计部分 -->
        <android.support.v7.widget.LinearLayoutCompat
            android:minHeight="50dp"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <android.support.v7.widget.AppCompatTextView
                android:gravity="center"
                android:text="@string/shopCart_d_summation"
                android:textColor="@android:color/darker_gray"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_shop_cart_total_price"
                android:gravity="center|left"
                android:text="￥0.01"
                android:textColor="@color/app_main"
                android:layout_width="0dp"
                android:textSize="20sp"
                android:layout_weight="1"
                android:layout_height="match_parent" />
        </android.support.v7.widget.LinearLayoutCompat>

        <!--  -->
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_shop_cart_pay"
            android:gravity="center"
            android:textSize="20sp"
            android:background="@color/app_main"
            android:textColor="@android:color/white"
            android:text="@string/shopCart_d_account"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

    </android.support.v7.widget.LinearLayoutCompat>
</android.support.v7.widget.LinearLayoutCompat>