<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- 标题 -->
    <android.support.v7.widget.Toolbar
        android:background="@android:color/holo_orange_dark"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <android.support.v7.widget.AppCompatAutoCompleteTextView
            android:gravity="center"
            android:text="@string/signin_title_login"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </android.support.v7.widget.Toolbar>

    <!-- 主体 -->
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.LinearLayoutCompat
            android:paddingTop="56dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:fitsSystemWindows="true"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!-- Logo -->
            <android.support.v7.widget.AppCompatImageView
                android:src="@mipmap/logo"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="24dp"
                android:layout_width="150dp"
                android:layout_height="150dp" />


            <!-- 邮箱 -->
            <android.support.design.widget.TextInputLayout
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_signin_email"
                    android:hint="@string/signup_d_email"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>



            <!-- 密码 -->
            <android.support.design.widget.TextInputLayout
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_signin_password"
                    android:hint="@string/signup_d_password"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>


            <!-- -->
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_signin_login"
                android:text="@string/signin_btn_d_login"
                android:textColor="@android:color/white"
                android:padding="12dp"
                android:gravity="center"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:background="@android:color/holo_orange_dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <!-- -->
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_signin_link_up"
                android:layout_marginBottom="24dp"
                android:textSize="16sp"
                android:gravity="center"
                android:text="@string/signin_d_hint_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!-- 微信登录 -->
            <com.joanzapata.iconify.widget.IconTextView
                android:id="@+id/itv_signin_we_chat"
                android:textColor="#04b00f"
                android:textSize="40sp"
                android:text="{fa-weixin}"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:layout_width="100dp"
                android:layout_height="100dp" />

        </android.support.v7.widget.LinearLayoutCompat>
    </android.support.v4.widget.NestedScrollView>

</android.support.v7.widget.LinearLayoutCompat>